# docs/swagger.yaml
@@ -51,6 +51,26 @@ definitions:
       message:
         type: string
     type: object
+  handler.UpdateOpeningRequest:
+    properties:
+      Salary:
+        type: integer
+      company:
+        type: string
+      link:
+        type: string
+      location:
+        type: string
+      remote:
+        type: boolean
+      role:
+        type: string
+    type: object
+  handler.UpdateOpeningsResponse:
+    properties:
+      message:
+        type: string
+    type: object
   schemas.OpeningResponse:
     properties:
       Salary:
@@ -163,6 +183,44 @@ paths:
       summary: Create opening
       tags:
       - Openings
+    put:
+      consumes:
+      - application/json
+      description: Update a job opening
+      parameters:
+      - description: Opening identificantion
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: Opening data to update
+        in: body
+        name: opening
+        required: true
+        schema:
+          $ref: '#/definitions/handler.UpdateOpeningRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.UpdateOpeningsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Update opening
+      tags:
+      - Openings
   /openings:
     get:
       consumes:
@@ -177,10 +235,6 @@ paths:
             $ref: '#/definitions/handler.ListOpeningsResponse'
         "400":
           description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.ErrorResponse'
-        "404":
-          description: Not Found
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: List openings
