# handler/response.go
@@ -48,3 +48,7 @@ type ListOpeningsResponse struct {
 	Message string                  `json:"message"`
 	Data    []schemas.OpeningResponse `json:"data"`
 }
+
+type UpdateOpeningsResponse struct {
+	Message string                  `json:"message"`
+}
